Test/functiondefine/fundef8.bpl.expect
fundef8.bpl(4,65): error: function with :define attribute has to be monomorphic
1 parse errors detected in fundef8.bpl
